# ApplicationDeployment

./: .gitignore  ApplicationDeployment  CLAUDE.md  CMakeLists.txt  INTEGRATION_GUIDE.md  MACOS_DEPLOYMENT.md  README.md  SOURCE_SPECIFICATION.md  build-all.sh  build-parent.sh  deployment.cmake  integrate.cmake  list-versions.sh
docker/arch/: Dockerfile
docker/arch/base/: Dockerfile
docker/arch/lts/: Dockerfile
docker/debian/bookworm/: Dockerfile
docker/debian/bullseye/: Dockerfile
docker/debian/buster/: Dockerfile
docker/debian/trixie/: Dockerfile
docker/fedora/: Dockerfile
docker/fedora/37/: Dockerfile
docker/fedora/38/: Dockerfile
docker/fedora/40/: Dockerfile
docker/ubuntu/18.04/: Dockerfile
docker/ubuntu/20.04/: Dockerfile
docker/ubuntu/22.04/: Dockerfile
docker/ubuntu/24.04/: Dockerfile
examples/advanced-integration/: CMakeLists.txt
examples/simple-integration/: CMakeLists.txt  README.md
scripts/linux/: build.sh
scripts/macos/: Info.plist.in  build-universal.sh  build.sh
scripts/macos/versions/: build-bigsur.sh  build-catalina.sh  build-mojave.sh  build-monterey.sh
scripts/windows/: build.bat
src/: mainwindow.cpp  mainwindow.h
